test/kubernetes/e2e/features/basicrouting/testdata/vs-with-retries.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-with-retries
spec:
  virtualHost:
    domains:
      - nginx.example.com
    routes:
      - matchers:
          - prefix: /retries
        routeAction:
          single:
            upstream:
              name: nginx-upstream-basicroute
        options:
          retries:
            retryOn: "5xx"
            retryBackOff:
              baseInterval: "1s"
              maxInterval: "1s"
            rateLimitedRetryBackOff:
              maxInterval: "1s"
              resetHeaders:
                - name: "X-RateLimit-Reset"
                  format: UNIX_TIMESTAMP
                - name: "Retry-After"
                  format: SECONDS
